# small_object_detection

./: README.md
Evaluate/: Readme.txt  csrt-val.txt  gen_detxt.py  kcf-val.txt
SORT/: readme.md
SORT/sort_ros/: CMakeLists.txt  package.xml
SORT/sort_ros/launch/: sort.launch
SORT/sort_ros/src/: sortt.py  utils.py
SOT/: CMakeLists.txt  package.xml
SOT/launch/: sot_cpp.launch
SOT/src/: Hungarian.cpp  msot_gentrk.cpp
Tools/: MOTgt2DETgt.py  frameIdxPlus1.py  sort.py  video2bag.py
sliced_training/: VisDrone2yolo.py  readme.md  slice_visdrone.py
sliced_training/runs/exp1/sliced_labels/: 0000001_02999_d_0000005_1.txt  0000001_02999_d_0000005_10.txt  0000001_02999_d_0000005_2.txt  0000001_02999_d_0000005_5.txt  0000001_02999_d_0000005_6.txt  0000001_02999_d_0000005_9.txt
sliced_training/utils/: plots.py
yolov5_ros/: CMakeLists.txt  readme.md
yolov5_ros/launch/: detect.launch  mot.launch
yolov5_ros/src/: yolo_csrt_final.py  yolo_gendet.py
yolov5_ros/src/yolov5/: detect.py  export.py  train.py  val.py
yolov5_ros/src/yolov5/data/: changan_nwpu.yaml  grassland.yaml  pets09-s2l1.yaml  playground.yaml  river.yaml
yolov5_ros/src/yolov5/models/: common.py  experimental.py
yolov5_ros/src/yolov5/utils/: dataloaders.py  general.py  plots.py  torch_utils.py
